Bug 983957 - Remove SPS ifdef from IOInterposer to unbreak non-SPS platforms. r=aklotz, a=lsblakk