xpcom/build/NSPRInterposer.h
@@ -5,8 +5,6 @@
 #ifndef NSPRINTERPOSER_H_
 #define NSPRINTERPOSER_H_
 
-#ifdef MOZ_ENABLE_PROFILER_SPS
-
 namespace mozilla {
 
 /**
@@ -24,7 +22,5 @@ void InitNSPRIOInterposing();
 void ClearNSPRIOInterposing();
 
 } // namespace mozilla
-
-#endif // MOZ_ENABLE_PROFILER_SPS
 
 #endif // NSPRINTERPOSER_H_
